--- a/build.gradle
+++ b/build.gradle
@@ -45,11 +45,12 @@ dependencies {
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
-
 tasks.withType(Test) {
     systemProperties = System.properties
+}
+test {
     useJUnitPlatform()
 }
 
-   
+
 
