--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -1,2 +1,2 @@
-remote.url=http://user1:1234@selenoid.autotests.cloud:4444/wd/hub/
+remote.url=https://user1:1234@selenoid.autotests.cloud:4444/wd/hub/
 video=https://selenoid.autotests.cloud/video/
